[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/Jumping Frog Demo.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Adventurer.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://8-Bit-Backgrounds-HD-1-620x349.png" type="Texture" id=3]
[ext_resource path="res://Escape the depths.png" type="Texture" id=4]
[ext_resource path="res://EndScreen.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 95
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 70
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 70
outline_color = Color( 1, 0.980392, 1, 1 )
extra_spacing_bottom = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 45
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 45
outline_color = Color( 1, 0.980392, 1, 1 )
extra_spacing_bottom = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 75
outline_size = 1
outline_color = Color( 1, 0.980392, 1, 1 )
extra_spacing_bottom = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 90
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 90
outline_size = 5
extra_spacing_bottom = 20
font_data = ExtResource( 2 )

[node name="EndScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="title background" type="Sprite" parent="."]
position = Vector2( 550.777, 348.889 )
scale = Vector2( 2.04364, 1.98266 )
texture = ExtResource( 3 )

[node name="Escape the depths" type="Sprite" parent="."]
position = Vector2( 513.378, 75.25 )
scale = Vector2( 1.31332, 1.35765 )
texture = ExtResource( 4 )

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 167.401
margin_top = 178.74
margin_right = 867.401
margin_bottom = 413.74
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Congratulations,
You reached the end!"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndBlack" type="Label" parent="."]
margin_left = 12.3908
margin_top = 150.881
margin_right = 1028.39
margin_bottom = 385.881
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.980392, 1, 1 )
text = "Congratulations,
You reached the end!"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndWhite" type="Label" parent="."]
margin_left = 4.56928
margin_top = 145.921
margin_right = 1020.57
margin_bottom = 380.921
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.980392, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.980392, 1, 1 )
text = "Congratulations,
You reached the end!"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeBlack" type="Label" parent="."]
margin_left = 90.8155
margin_top = 371.78
margin_right = 339.815
margin_bottom = 437.78
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.980392, 1, 1 )
text = "Your Time: "
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeWhite" type="Label" parent="."]
margin_left = 86.8155
margin_top = 367.78
margin_right = 335.815
margin_bottom = 433.78
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.980392, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.980392, 1, 1 )
text = "Your Time: "
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTimeBlack" type="Label" parent="."]
margin_left = 555.815
margin_top = 371.78
margin_right = 804.815
margin_bottom = 437.78
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.980392, 1, 1 )
text = "Best Time: "
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTimeWhite" type="Label" parent="."]
margin_left = 551.815
margin_top = 367.78
margin_right = 800.815
margin_bottom = 433.78
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.980392, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.980392, 1, 1 )
text = "Best Time: "
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 310.0
margin_top = 464.0
margin_right = 730.0
margin_bottom = 579.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TextureButton"]
visible = false
margin_left = -25.762
margin_top = 24.3393
margin_right = 442.238
margin_bottom = 129.339
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureButton"]
visible = false
margin_left = -38.4403
margin_top = 39.4803
margin_right = 225.56
margin_bottom = 135.48
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Restart?"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartWhite" type="Label" parent="TextureButton"]
margin_left = 7.0
margin_top = 24.0
margin_right = 430.0
margin_bottom = 135.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Restart?"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartBlack" type="Label" parent="TextureButton"]
margin_top = 15.0
margin_right = 423.0
margin_bottom = 126.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.980392, 1, 1 )
text = "Restart?"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
